--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -109,7 +109,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y calibre git
+          sudo apt-get install -y calibre git mdbook-epub
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
